--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -82,9 +82,23 @@ test:
     - dbt.adapters.postgres
   commands:
     - pip check
-    #- PYTHONPATH=$(pwd) pytest -vvv {{ ignore_tests }} tests  # [not win]
-    #'PYTHONPATH' is not recognized as an internal or external command
-    #- set PYTHONPATH=%cd% && pytest -vvv tests/  # [win]
+    - python -m pytest -vvv tests/unit
+    # Only 6 functional tests passed, all other tests in the tests/functional directory needs to build and run docker to start postgres database server.
+    # Error message:
+    #   raise FailedToConnectError(str(e))
+    #   dbt.adapters.exceptions.connection.FailedToConnectError: Database Error
+    #   connection to server at "localhost" (127.0.0.1), port 5432 failed: Connection refused
+    #     Is the server running on that host and accepting TCP/IP connections?
+    # Example on how to start psql server:
+    # https://github.com/dbt-labs/dbt-postgres/blob/v1.9.0/pyproject.toml#L76
+    - |
+      python -m pytest -vvv {{ ignore_tests }} \
+        tests/functional/test_config.py::TestProfile::test_bad_type \
+        tests/functional/test_config.py::TestProfile::test_from_raw_profiles \
+        tests/functional/test_config.py::TestProfile::test_invalid_credentials \
+        tests/functional/test_config.py::TestProfile::test_missing_target \
+        tests/functional/test_config.py::TestProfile::test_missing_type \
+        tests/functional/test_connection_manager.py::TestConnectionManagerOpen::test_open
   requires:
     - pip
     - pytest
